# Check_AAudio

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: myfile
app/src/main/cpp/: CMakeLists.txt  StreamEngine.cpp  jni_bridge.cpp
app/src/main/debug-utils/: logging_macros.h
app/src/main/java/com/better/aaudio/: AAudioApi.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
